--- a/credits.html
+++ b/credits.html
@@ -21,8 +21,8 @@
 	<h2>CREDITS</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
-		<span><a href='localhost/layout.html'>Home</a></span>
-		<span><a href='/quizzes'>Quizzes</a></span>
+		<span><a href='layout.html'>Home</a></span>
+		<span><a href='addQuestion.html'>Add Question</a></span>
 	</nav>
     <section class="main" id="s1">
     
