--- a/layout.html
+++ b/layout.html
@@ -22,7 +22,8 @@
     </header>
 	<nav class='main' id='n1' role='navigation'>
 		<span><a href='layout.html'>Home</a></span>
-		<span><a href='addQuestion.html'>Quizzes</a></span>
+		<span><a href='layout.html'>Quizzes</a></span>
+		<span><a href='addQuestion.html'>Add Question</a></span>
 		<span><a href='credits.html'>Credits</a></span>
 	</nav>
     <section class="main" id="s1">
