--- a/addQuestion.html
+++ b/addQuestion.html
@@ -65,6 +65,7 @@
 	function deleteIrudiBistaratua() {
 		$("#irudiBistaratua").hide();
 	}
+	
     $(document).ready(function(){
 
         $.postaZuzena = function(){
@@ -83,7 +84,6 @@
                 return false;
             }
         }
-
         $('#galderenF').submit(function()  {
             if ($.denakBeteta()) {
                 if ($.postaZuzena()) {
@@ -108,13 +108,12 @@
             }
         })
     })
-
 	</script>
 <titulua>Galdera sortu:</titulua>
 <p>(*) Karakterea duten hutsuneak derrigorrezkoak dira.</p>
 <form  id="galderenF" name="galderenF"  action="addQuestionwithImage.php" method="post"  enctype="multipart/form-data" target="_blank">
     <label for="posta">Posta elektronikoa(*): </label>
-    <input type="text" name="posta" id="posta" class="erantzuna"/>
+    <input type="text" name="posta" id="posta" class="erantzuna" value='load(layoutR.php['':''])'/>
     <br/><br/>
     <label for="galderaTestua">Galderaren testua(*): </label>
     <input type="text" name="galderaTestua"  class="erantzuna" id="galderaTestua" height="2000px"/>
