--- a/layout.html
+++ b/layout.html
@@ -16,15 +16,16 @@
   <body>
   <div id='page-wrap'>
 	<header class='main' id='h1'>
-      <span class="right"><a href="/login">LogIn</a> </span>
+      <span class="right"><a href="logIn.php">LogIn</a> </span>
       <span class="right" style="display:none;"><a href="/logout">LogOut</a> </span>
 	<h2>Quiz: crazy questions</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
 		<span><a href='layout.html'>Home</a></span>
 		<span><a href='layout.html'>Quizzes</a></span>
-		<span><a href='addQuestion.html'>Add Question</a></span>
 		<span><a href='credits.html'>Credits</a></span>
+		<span><a href='logIn.php'>Log In</a></span>
+		<span><a href='signUp.php'>Sign Up</a></span>
 	</nav>
     <section class="main" id="s1">
     
