Lab4 Hautazko eta Dena.

--- a/addQuestion.html
+++ b/addQuestion.html
@@ -111,7 +111,7 @@
 	</script>
 <titulua>Galdera sortu:</titulua>
 <p>(*) Karakterea duten hutsuneak derrigorrezkoak dira.</p>
-<form  id="galderenF" name="galderenF"  action="addQuestionwithImage.php" method="post"  enctype="multipart/form-data" target="_blank">
+<form  id="galderenF" name="galderenF"  action="addQuestionWithImage.php" method="post"  enctype="multipart/form-data" target="_blank">
     <label for="posta">Posta elektronikoa(*): </label>
     <input type="text" name="posta" id="posta" class="erantzuna" value='load(layoutR.php['':''])'/>
     <br/><br/>
