Azken Praktika: Dena eginda.

--- a/credits.html
+++ b/credits.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
 	<title>Quizzes</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel='stylesheet' type='text/css' href='stylesPWS/style.css' />
 	<link rel='stylesheet' 
 		   type='text/css' 
