--- a/addQuestion.html
+++ b/addQuestion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Add question </title>
-
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             background-color: cadetblue;
