--- a/getUserInform.html
+++ b/getUserInform.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Add question </title>
-
+    <title>Add Question </title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             background-color: cadetblue;
@@ -99,9 +99,12 @@
     <input type="text" name="surname" id="surname" >
     <br/><br/>
 	
-    </form>
+ </form>
 	<label for="botoia">&nbsp</label>
     <input id="botoia" type="submit" value="Autocomplete" name="botoia" onclick="autoComplete()" >
-	
+<footer class='main' id='f1'>
+			<p><a href="http://en.wikipedia.org/wiki/Quiz" target="_blank">What is a Quiz?</a></p>
+			<a href='https://github.com/jonlegarda/WST19'>Link GITHUB</a>
+		</footer>
 </body>
 </html>
